[package]
name = "webport"
version = "0.1.1"
edition = "2018"
license = "MIT"
description = "A library for integrating with webport."
repository = "https://github.com/third-act/webport/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.2", features = ["native-tls", "json"]}
serde = {version = "1.0.125", features = ["derive"]}
serde_json = "1.0.64"
tokio = { version = "1.4.0", features = ["time", "fs"] }
chrono = { version = "0.4.19", features = ["serde"] }
url = "2.2.0"
